fix of overflow bug , update responive fonts and sizes from smaller screens

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  overflow-x: hidden;
 }
 
 .app-body{
@@ -31,6 +32,7 @@ body {
 }
 
 .history {
+  padding-left: 30px;
 }
 
 .footer {
@@ -151,11 +153,11 @@ body {
 
 .bid {
   margin: 0 1em;
-  margin: 0 25px;
+  margin: 0 20px;
 
   h4 {
     color: #fff;
-    font-size: 2.7em;
+    font-size: 3vw;
   }
 
   h6 {
@@ -187,7 +189,7 @@ body {
 // Spinner
 
 #spinner {
-  transition: all 14000ms cubic-bezier(0.57, 0.585, 0.065, 1);
+  transition: transform 14000ms cubic-bezier(0.57, 0.585, 0.065, 1);
   user-drag: none;
   user-select: none;
   -moz-user-select: none;
@@ -196,7 +198,7 @@ body {
   -ms-user-select: none;
   z-index: 1;
   position: relative;
-  width: 550px;
+  width: 35vw;
   margin: 25px 0 0 0;
 }
 
@@ -286,7 +288,7 @@ body {
   display: flex;
 
   img {
-    width: 180px;
+    max-width: 180px;
     height: 120px;
     margin: 0 20px 0 20px;
   }
